# new_admin_panel_sprint_1

movies_admin/: Makefile  pyproject.toml
movies_admin/config/: settings.py
movies_admin/config/components/: database.py
movies_admin/config/envs/: .env.example
movies_admin/movies/: admin.py  models.py
movies_admin/movies/locale/en/LC_MESSAGES/: django.po
movies_admin/movies/locale/ru/LC_MESSAGES/: django.mo  django.po
schema_design/: .gitignore  Makefile  movies_database.ddl
sqlite_to_postgres/: .env.example  .gitignore  Makefile  connectors.py  db_dataclasses.py  db_settings.py  load_data.py  logger.py  postgres_saver.py  pyproject.toml  setup.cfg  sqlite_extractor.py
sqlite_to_postgres/tests/: test_data_consistency.py
